--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ edition = "2018"
 all-features = true
 
 [dependencies]
-num = "0.2"
-euclid = "0.20"
+num = "0.3"
+euclid = {version="0.20", optional=true}
 lazy_static = "1"
 palette = "0.5"
 rayon = {version = "1", optional = true}
@@ -31,3 +31,4 @@ io = []
 v4l = ["rscam"]
 ser = ["serde", "palette/serde"]
 parallel = ["rayon"]
+transforms = ["euclid"]
