--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ all-features = true
 
 [dependencies]
 num = "0.3"
-euclid = {version="0.20", optional=true}
-lazy_static = "1"
-palette = "0.5"
+euclid = {version="0.22.1", optional=true}
+lazy_static = "1.4.0"
+palette = {version="0.5", optional = true}
 rayon = {version = "1", optional = true}
 rscam = {version = "0.5", optional = true}
 serde = {version = "1", optional = true, features=["derive"]}
@@ -26,9 +26,9 @@ serde = {version = "1", optional = true, features=["derive"]}
 cc = "1"
 
 [features]
-default = ["parallel", "io"]
+default = ["parallel", "io","transforms"]
 io = []
 v4l = ["rscam"]
 ser = ["serde", "palette/serde"]
 parallel = ["rayon"]
-transforms = ["euclid"]
+transforms = ["euclid", "palette"]
