--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "image2"
-version = "0.11.3"
+version = "0.11.4"
 authors = ["Zach Shipko <zachshipko@gmail.com>"]
 license = "ISC"
 keywords = ["image", "image-processing"]
@@ -16,7 +16,7 @@ all-features = true
 [dependencies]
 num = "0.3"
 euclid = {version="0.22.1", optional=true}
-lazy_static = "1.4.0"
+lazy_static = {version="1.4.0", optional=true}
 palette = {version="0.5", optional = true}
 rayon = {version = "1", optional = true}
 rscam = {version = "0.5", optional = true}
@@ -28,6 +28,7 @@ cc = "1"
 [features]
 default = ["io"]
 io = []
+filter = ["lazy_static"]
 v4l = ["rscam"]
 ser = ["serde", "palette/serde"]
 parallel = ["rayon"]
